--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -51,7 +52,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -62,7 +62,7 @@ body {
     flex-direction: column;
     padding: 4px 8px;
     color: #b3b3b3;
-    font-family: 600;
+    font-weight: 600;
     font-size: 14px;
     margin-top: 10px;
 }
@@ -80,7 +80,6 @@ body {
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", "sans-serif";
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -127,7 +126,6 @@ body {
 .section-playlist_content .text {
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist_content .title {
@@ -147,7 +145,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -199,8 +196,6 @@ body {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    font-family: "DM Sans", sans-serif;
-
 }
 
 .footer_subscribe .footer-subscribe_title {
