--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000;
+    background-color: var(--full-black);
     font-family: var(--font-dm-sans);
 }
 
@@ -13,18 +13,18 @@ body {
 }
 
 .sidebar_navigation {
-    background-color: #121212;
+    background-color: var(--third-black);
     border-radius: 8px; 
     padding: 5px 0px 0px 0px;
 }
 
 
 .sidebar_navigation a:hover {
-    color: #ffffff;
+    color: var(--full-white);
 }
 
 .sidebar_navigation .logo {
-    background-color: #121212;
+    background-color: var(--third-black);
     display: flex;
     border-radius: 8px;
     padding: 16px 0 0 16px;
@@ -48,20 +48,20 @@ body {
 }
 
 .sidebar nav ul li a {
-    color: #b3b3b3;
+    color: var(--first-gray);
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
 }
 
 .library {
-    background-color: #121212;
+    background-color: var(--third-black);
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     padding: 4px 8px;
-    color: #b3b3b3;
+    color: var(--first-gray);
     font-weight: 600;
     font-size: 14px;
     margin-top: 10px;
@@ -75,7 +75,7 @@ body {
 .library .library_button {
     display: flex;
     margin-right: 10px;
-    color: #b3b3b3;
+    color: var(--first-gray);
     background-color: transparent;
     border: 0px;
     font-size: 14px;
@@ -88,14 +88,13 @@ body {
 
 .library .library_content .library_button:hover, .library_content span:hover{
     cursor: pointer;
-    color: #ffffff;
+    color: var(--full-white);
 }
-
 
 .library .library_button .fa {
     font-size: 20px;
     font-weight: 300;
-    color: #b3b3b3;
+    color: var(--first-gray);
     margin-right: 10px;
     padding-right: 8px;
 }
@@ -109,8 +108,8 @@ body {
     align-items: flex-start;
     justify-content: space-between;
     gap: 20px;
-    background-color: #242424;
-    color:#b3b3b3;
+    background-color: var(--forth-black);
+    color:var(--first-gray);
     font-weight: 600;
     font-size: 14px;
     margin: 8px 0px;
@@ -125,7 +124,7 @@ body {
 
 .section-playlist_content .text {
     padding-bottom: 14px;
-    color: #fff;
+    color: var(--full-white);
 }
 
 .section-playlist_content .title {
@@ -140,8 +139,8 @@ body {
 .section-playlist_content .section-playlist_button {
     display: flex;
     justify-content: center;
-    background-color: #fff;
-    color: #000;
+    background-color: var(--full-white);
+    color: var(--full-black);
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
@@ -159,7 +158,7 @@ body {
 }
 
 .sidebar .cookies a {
-    color: #b3b3b3;
+    color: var(--first-gray);
     font-weight: 500;
     font-size: 10px;
     text-decoration: none;
@@ -171,9 +170,9 @@ body {
 
 .languages .languages_button {
     background-color: transparent;
-    border: 1px solid #878787;
+    border: 1px solid var(--second-gray);
     border-radius: 20px;
-    color: #fff;
+    color: var(--full-white);
     font-weight: bold;
     cursor: pointer;
     width: 170px;
@@ -199,7 +198,7 @@ body {
 }
 
 .footer_subscribe .footer-subscribe_title {
-    color: #fff;
+    color: var(--full-white);
     text-transform: uppercase;
     font-weight: 800;
     font-size: 16px;
@@ -207,14 +206,14 @@ body {
 }
 
 .footer_subscribe .footer-subscribe_subtitle {
-    color: #fff;
+    color: var(--full-white);
     font-weight: 400;
     font-size: 16px;
 }
 
 .footer_subscribe .footer-subscribe_button {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: var(--full-white);
+    color: var(--full-black);
     font-size: 16px;
     font-weight: bold;
     padding: 18px 34px;
