Criação dos cards das playlists disponíveis para o usuário na tela inicial

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -4,6 +4,7 @@
 
     /* COLORS */
     --full-black: #000;
+    --first-black: #181818;
     --second-black: #131313;
     --third-black: #121212;
     --bg-arrow-color: rgba(0,0,0,0.7);
