--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -1,3 +1,5 @@
+/* RESPONSIVIDADE PARA CADA TIPO DE TELA */
+
 @media screen and (max-width: 1015px) {
     .offer_list-item {
         grid-template-columns: 1fr 1fr; 
